FSAR-28: News alert and article examples - Add simple article example and alert example - Stop print buttons shrinking on mobile

--- a/src/layout/contentLayout/contentLayout.scss
+++ b/src/layout/contentLayout/contentLayout.scss
@@ -30,8 +30,9 @@
 
   &__top {
     @include grid-cols(4, 4);
-    margin-bottom: 3rem;
+    margin-bottom: 2rem;
     @media screen and (min-width: $fsa-lg) {
+      margin-bottom: 3rem;
       @include grid-cols(8);
       @include cols-push(4);
     }
